fix: Alerts have increased z-index when a Modal is displayed
Fixes: #585

--- a/stylus/components/alerts.styl
+++ b/stylus/components/alerts.styl
@@ -27,6 +27,10 @@ $alert
         bottom auto
         text-align center
 
+$alert--modal
+    z-index $alert-index
+    bottom 0
+
 $alert-wrapper
     display inline-flex
     flex-wrap nowrap
